--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -4,30 +4,28 @@
 %Leave this here in order to start the whole on an odd-numbered page
 \cleardoublepage
 \chapter[2019 Emissions]{National emissions for 2019 in the EMEP domain}
-\label{ch:appx_emis_2018}
+\label{ch:appx_emis_2019}
 
-\old{TOOD}
 
-This appendix contains the national emission data for 2018 used throughout this
+This appendix contains the national emission data for 2019 used throughout this
 report for main pollutants and  primary particle emissions in the new 
 EMEP domain, which covers the geographic area between 30\degrees N-82\degrees N latitude and 30\degrees W-90\degrees E longitude. \\
 
 These are the emissions that are used as basis
- for the 2018 source-receptor calculations. Results of these
- source-receptor calculations are presented in Appendix~\ref{ch:appx_sr2018}.\\
+ for the 2019 source-receptor calculations. Results of these
+ source-receptor calculations are presented in Appendix~\ref{ch:appx_sr2019}.\\
 
-The land-based emissions for 2018 have been derived from the 2020
-official data submissions to UNECE CLRTAP \citep{CEIP2020}.
-This year two different estimates for primary PM emissions have been used in the modeling: 1) EMEP emissions as prepared by CEIP based on the official data submissions for 2018, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the TNO Ref2 data set. For more details please consult Chapter~\ref{ch:Condensables}. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwRef2C. National emission totals for both data sets are shown in Table~\ref{tab:2018emisPM}. \\
+The land-based emissions for 2019 have been derived from the 2021
+official data submissions to UNECE CLRTAP \citep{CEIP2021}.
+
+\old{MODIFY: This year two different estimates for primary PM emissions have been used in the modeling: 1) EMEP emissions as prepared by CEIP based on the official data submissions for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the TNO Ref2 data set. For more details please consult Chapter~\ref{ch:Condensables}. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwRef2C. National emission totals for both data sets are shown in Table~\ref{tab:2019emisPM}.} \\
 
 Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year's update uses the CAMS global shipping emissions \citep{CAMSemis2019}  developed by FMI (Finnish Meteorological Institute).
 \\
 
 Natural marine emissions of dimethyl sulphid (DMS) are calculated dynamically during the model run and vary with current meteorological conditions.\\
 
-\sox emissions from passive degassing of Italian volcanoes (Etna,
-Stromboli and Vulcano) are reported by
-Italy. \\
+\sox emissions from passive degassing of Italian volcanoes (Etna, Stromboli and Vulcano) are reported by Italy. \\
 
 Note that emissions in this appendix are given in different units than
 used elsewhere in this report in order to keep consistency with the
@@ -44,10 +42,10 @@ reported data.
 \clearpage
  
 \begin{table}
-\caption{National total emissions of main pollutants for 2018 in the EMEP
+\caption{National total emissions of main pollutants for 2019 in the EMEP
   domain. Unit: Gg. (Emissions of SO$_x$ and NO$_x$ are given as
   Gg(SO$_2$) and Gg(NO$_2$), respectively.)}
-\label{tab:2018emisMAIN}
+\label{tab:2019emisMAIN}
 
 \vspace{15pt}
 
@@ -56,67 +54,67 @@ reported data.
 \begin{tabular}{|l|r|r|r|r|r|}
 \hline
  Area/Pollutant&SO$_x$&NO$_x$&NH$_3$&NMVOC&CO\\\hline\hline
-                       Albania&     6&    29&    27&    32&    75 \\\hline
-                       Armenia&     5&    42&    15&    30&    93 \\\hline
-                       Austria&    12&   151&    65&   107&   490 \\\hline
-                    Azerbaijan&    75&   266&    78&   376&   672 \\\hline
-                       Belarus&    47&   143&   130&   281&   717 \\\hline
-                       Belgium&    38&   169&    70&   116&   344 \\\hline
-        Bosnia and Herzegovina&   143&    55&    21&   105&   253 \\\hline
-                      Bulgaria&    89&    97&    45&    73&   266 \\\hline
-                       Croatia&    10&    51&    36&    72&   235 \\\hline
-                        Cyprus&    17&    15&     7&    10&    12 \\\hline
-                       Czechia&    97&   162&    72&   231&   831 \\\hline
-                       Denmark&    11&   106&    77&   120&   237 \\\hline
-                       Estonia&    31&    32&    10&    22&   130 \\\hline
-                       Finland&    33&   127&    32&    85&   351 \\\hline
-                        France&   136&   749&   594&   595&  2514 \\\hline
-                       Georgia&    18&    87&    37&    82&   371 \\\hline
-                       Germany&   289&  1202&   636&  1140&  2938 \\\hline
-                        Greece&    65&   255&    63&   150&   396 \\\hline
-                       Hungary&    23&   120&    78&   125&   362 \\\hline
-                       Iceland&    55&    22&     5&     6&   110 \\\hline
-                       Ireland&    12&   110&   119&   110&    78 \\\hline
-                         Italy&   110&   669&   366&   913&  2082 \\\hline
-                    Kazakhstan&  2192&   726&   109&   606&  1100 \\\hline
-                    Kyrgyzstan&    43&    66&    32&    47&   246 \\\hline
-                        Latvia&     4&    34&    15&    40&   124 \\\hline
-                 Liechtenstein&     0&     0&     0&     0&     1 \\\hline
-                     Lithuania&    13&    58&    39&    43&   140 \\\hline
-                    Luxembourg&     1&    20&     6&    10&    21 \\\hline
-                         Malta&     0&     6&     1&     3&     8 \\\hline
-                       Moldova&     8&    42&    52&    61&   124 \\\hline
-                        Monaco&     0&     0&     0&     0&     1 \\\hline
-                    Montenegro&    27&    13&     6&     5&    12 \\\hline
-                   Netherlands&    25&   244&   129&   240&   549 \\\hline
-               North Macedonia&    61&    19&    10&    29&    56 \\\hline
-                        Norway&    16&   160&    35&   167&   434 \\\hline
-                        Poland&   502&   762&   317&   733&  2339 \\\hline
-                      Portugal&    45&   155&    56&   155&   285 \\\hline
-                       Romania&    82&   225&   176&   237&   779 \\\hline
-            Russian Federation&  1448&  3243&  1221&  3720& 12465 \\\hline
-                        Serbia&   346&   127&    79&   120&   250 \\\hline
-                      Slovakia&    20&    67&    30&    86&   301 \\\hline
-                      Slovenia&     5&    34&    19&    32&    99 \\\hline
-                         Spain&   197&   698&   470&   624&  1647 \\\hline
-                        Sweden&    17&   126&    53&   134&   337 \\\hline
-                   Switzerland&     5&    66&    55&    80&   157 \\\hline
-                    Tajikistan&    54&    16&    28&    57&   250 \\\hline
-                        Turkey&  2528&   924&   997&  1078&  1620 \\\hline
-                  Turkmenistan&   140&   228&    89&   157&   712 \\\hline
-                       Ukraine&   654&   633&   245&   398&  2809 \\\hline
-                United Kingdom&   160&   843&   277&   806&  1541 \\\hline
-                    Uzbekistan&   257&   397&   189&   329&  1419 \\\hline
-                   Asian areas&  7097&  7933&  5207& 11241& 27258 \\\hline
-                  North Africa&  1677&  1496&   646&  1416&  2906 \\\hline
-                    Baltic Sea&    10&   309&     0&     2&    21 \\\hline
-                     Black Sea&    44&   101&     0&     1&     8 \\\hline
-             Mediterranean Sea&   692&  1366&     0&    10&    94 \\\hline
-                     North Sea&    31&   654&     0&     5&    48 \\\hline
-     North-East Atlantic Ocean&   442&   848&     0&     6&    60 \\\hline
-      Natural marine emissions&  2440&     0&     0&     0&     0 \\\hline
-            Volcanic emissions&   943&     0&     0&     0&     0 \\\hline\hline
-                         TOTAL& 23549& 27297& 13171& 27461& 73776 \\\hline
+                       Albania&     6&    28&    20&    34&    77 \\\hline
+                       Armenia&     6&    42&    15&    26&    76 \\\hline
+                       Austria&    11&   144&    64&   109&   498 \\\hline
+                    Azerbaijan&    79&   294&    79&   378&   665 \\\hline
+                       Belarus&    45&   128&   134&   276&   696 \\\hline
+                       Belgium&    30&   160&    66&   113&   369 \\\hline
+        Bosnia_and_Herzegovina&    93&    51&    22&   100&   242 \\\hline
+                      Bulgaria&    88&    97&    44&    72&   254 \\\hline
+                       Croatia&     8&    54&    37&    75&   216 \\\hline
+                        Cyprus&    16&    14&     7&     9&    11 \\\hline
+                       Czechia&    80&   172&    85&   215&   819 \\\hline
+                       Denmark&    10&    99&    75&   103&   209 \\\hline
+                       Estonia&    19&    25&    11&    23&   131 \\\hline
+                       Finland&    29&   120&    32&    85&   345 \\\hline
+                        France&   100&   774&   593&   956&  2375 \\\hline
+                       Georgia&    21&    47&    33&    31&   109 \\\hline
+                       Germany&   264&  1137&   587&  1121&  2883 \\\hline
+                        Greece&    80&   250&    64&   144&   464 \\\hline
+                       Hungary&    17&   114&    79&   119&   354 \\\hline
+                       Iceland&    58&    21&     5&     5&   106 \\\hline
+                       Ireland&    11&   101&   125&   114&    68 \\\hline
+                         Italy&   105&   627&   355&   894&  2062 \\\hline
+                    Kazakhstan&  2210&   869&   109&   595&  1458 \\\hline
+                    Kyrgyzstan&    39&    62&    32&    42&   206 \\\hline
+                        Latvia&     4&    33&    18&    41&   120 \\\hline
+                 Liechtenstein&     0&     0&     0&     0&     0 \\\hline
+                     Lithuania&    12&    52&    35&    52&   116 \\\hline
+                    Luxembourg&     1&    19&     6&    11&    21 \\\hline
+                         Malta&     0&     5&     1&     3&     7 \\\hline
+                       Moldova&     7&    41&    20&    77&   174 \\\hline
+                        Monaco&     0&     0&     0&     0&     2 \\\hline
+                    Montenegro&    25&    13&     4&     9&    34 \\\hline
+                   Netherlands&    23&   238&   123&   237&   626 \\\hline
+               North_Macedonia&   116&    21&     8&    24&    55 \\\hline
+                        Norway&    16&   151&    29&   153&   400 \\\hline
+                        Poland&   427&   682&   317&   647&  2112 \\\hline
+                      Portugal&    44&   148&    59&   161&   293 \\\hline
+                       Romania&    99&   217&   178&   230&   894 \\\hline
+            Russian_Federation&  1368&  3133&  1219&  3838& 12373 \\\hline
+                        Serbia&   395&   129&    76&   121&   330 \\\hline
+                      Slovakia&    16&    61&    31&   100&   279 \\\hline
+                      Slovenia&     4&    29&    18&    31&    97 \\\hline
+                         Spain&   149&   646&   471&   608&  1600 \\\hline
+                        Sweden&    16&   127&    53&   134&   336 \\\hline
+                   Switzerland&     4&    61&    54&    81&   161 \\\hline
+                    Tajikistan&    42&    49&    34&    86&   526 \\\hline
+                        Turkey&  2455&   862&   765&  1121&  1674 \\\hline
+                  Turkmenistan&   113&   265&    73&   187&   903 \\\hline
+                       Ukraine&   508&   614&   246&   384&  2835 \\\hline
+                United_Kingdom&   163&   843&   272&   813&  1585 \\\hline
+                    Uzbekistan&   325&   346&   200&   317&  1174 \\\hline
+                   Asian_areas&  5289&  6651&  3301&  9368& 33748 \\\hline
+                  North_Africa&  1230&  1266&   408&  1602&  3241 \\\hline
+                    Baltic_Sea&    11&   349&     0&     3&    28 \\\hline
+                     Black_Sea&    50&   112&     0&     1&    10 \\\hline
+             Mediterranean_Sea&   750&  1519&     0&    13&   120 \\\hline
+                     North_Sea&    36&   758&     0&     7&    67 \\\hline
+     North-East_Atlantic_Ocean&   494&   931&     0&     8&    75 \\\hline
+      Natural_marine_emissions&  2926&     0&     0&     0&     0 \\\hline
+            Volcanic_emissions&   943&     0&     0&     0&     0 \\\hline\hline
+                         TOTAL& 21486& 25803& 10691& 26105& 80709 \\\hline
 
 \end{tabular}
 \end{center}
@@ -126,9 +124,9 @@ reported data.
 \clearpage
  
 \begin{table}
-\caption{National total emissions of particulate matter for 2018 in the EMEP
+\caption{National total emissions of particulate matter for 2019 in the EMEP
   domain. Unit: Gg. }
-\label{tab:2018emisPM}
+\label{tab:2019emisPM}
 
 \vspace{15pt}
 
@@ -138,67 +136,68 @@ reported data.
 \hline
  Area/Pollutant& BC&PM$_{2.5}$&PM$_{co}$&PM$_{10}$&PM$_{2.5}$&PM$_{co}$&PM$_{10}$\\
  &&EMEP&EMEP&EMEP&EMEPwRef2C&EMEPwRef2C&EMEPwRef2C\\\hline\hline
-                       Albania&     3&    14&     5&    19&    13&     4&    17 \\\hline
-                       Armenia&     1&     9&     2&    11&     6&     2&     8 \\\hline
-                       Austria&     5&    14&    12&    26&    65&    12&    77 \\\hline
-                    Azerbaijan&     8&    35&     9&    44&    32&     9&    41 \\\hline
-                       Belarus&     7&    55&    18&    73&    55&    17&    72 \\\hline
-                       Belgium&     3&    22&    10&    32&    25&    10&    35 \\\hline
-        Bosnia and Herzegovina&     6&    49&    13&    62&    37&    11&    49 \\\hline
-                      Bulgaria&     4&    30&    17&    48&    34&    17&    51 \\\hline
-                       Croatia&     4&    29&     9&    38&    16&     9&    25 \\\hline
-                        Cyprus&     0&     1&     1&     2&     2&     1&     3 \\\hline
-                       Czechia&     5&    39&    11&    51&    52&    11&    63 \\\hline
-                       Denmark&     2&    16&    12&    29&    29&    13&    41 \\\hline
-                       Estonia&     2&     7&     4&    11&    17&     5&    21 \\\hline
-                       Finland&     4&    18&    13&    31&    51&    13&    63 \\\hline
-                        France&    24&   134&    81&   216&   289&    84&   373 \\\hline
-                       Georgia&     5&    24&     4&    29&    19&     8&    27 \\\hline
-                       Germany&    13&    97&   114&   211&   149&   114&   262 \\\hline
-                        Greece&     6&    33&    24&    57&    35&    24&    58 \\\hline
-                       Hungary&     6&    42&    21&    62&    33&    20&    54 \\\hline
-                       Iceland&     0&     1&     0&     2&     1&     0&     2 \\\hline
-                       Ireland&     2&    12&    16&    28&     9&    15&    25 \\\hline
-                         Italy&    19&   143&    34&   177&   166&    36&   202 \\\hline
-                    Kazakhstan&    20&   142&    71&   213&   142&    71&   213 \\\hline
-                    Kyrgyzstan&     2&    15&     5&    20&    15&     5&    20 \\\hline
-                        Latvia&     3&    20&     7&    28&    28&     7&    36 \\\hline
+                       Albania&     2&    13&     3&    15&    12&     2&    14 \\\hline
+                       Armenia&     1&     8&     2&    10&     8&     2&    10 \\\hline
+                       Austria&     4&    14&    12&    26&    34&    12&    46 \\\hline
+                    Azerbaijan&     9&    38&    10&    48&    38&    10&    48 \\\hline
+                       Belarus&     8&    56&    18&    73&    55&    17&    72 \\\hline
+                       Belgium&     3&    18&     9&    27&    18&     9&    27 \\\hline
+        Bosnia_and_Herzegovina&     6&    46&    10&    56&    36&     9&    46 \\\hline
+                      Bulgaria&     4&    30&    17&    46&    30&    17&    46 \\\hline
+                       Croatia&     4&    29&    12&    41&    29&    12&    41 \\\hline
+                        Cyprus&     0&     1&     1&     2&     1&     1&     2 \\\hline
+                       Czechia&     5&    36&    11&    47&    36&    11&    47 \\\hline
+                       Denmark&     2&    13&    10&    23&    13&    10&    23 \\\hline
+                       Estonia&     2&     6&     3&     9&    15&     4&    19 \\\hline
+                       Finland&     4&    17&    13&    30&    17&    13&    30 \\\hline
+                        France&    21&   121&    81&   202&   183&    84&   266 \\\hline
+                       Georgia&     6&    24&     4&    28&    24&     4&    28 \\\hline
+                       Germany&    12&    92&   112&   204&   122&   111&   233 \\\hline
+                        Greece&     9&    37&    24&    61&    37&    24&    61 \\\hline
+                       Hungary&     6&    40&    22&    62&    40&    22&    62 \\\hline
+                       Iceland&     0&     1&     1&     2&     1&     1&     2 \\\hline
+                       Ireland&     2&    12&    16&    28&    10&    16&    26 \\\hline
+                         Italy&    18&   139&    33&   172&   139&    33&   172 \\\hline
+                    Kazakhstan&    17&   137&    71&   208&   137&    71&   208 \\\hline
+                    Kyrgyzstan&     1&    14&     5&    19&    14&     5&    19 \\\hline
+                        Latvia&     3&    20&     9&    29&    20&     9&    29 \\\hline
                  Liechtenstein&     0&     0&     0&     0&     0&     0&     0 \\\hline
-                     Lithuania&     2&     6&     6&    11&    21&     6&    27 \\\hline
+                     Lithuania&     1&     5&     6&    11&    21&     6&    27 \\\hline
                     Luxembourg&     0&     1&     1&     2&     1&     1&     2 \\\hline
-                         Malta&     0&     0&     0&     1&     0&     0&     1 \\\hline
-                       Moldova&     3&    17&     4&    21&     9&     4&    13 \\\hline
+                         Malta&     0&     0&     1&     1&     0&     1&     1 \\\hline
+                       Moldova&     3&    27&     5&    32&    27&     5&    32 \\\hline
                         Monaco&     0&     0&     0&     0&     0&     0&     0 \\\hline
-                    Montenegro&     1&     7&     2&     9&     5&     2&     7 \\\hline
-                   Netherlands&     2&    12&    10&    23&    24&    10&    35 \\\hline
-               North Macedonia&     1&     9&     6&    14&    12&     6&    18 \\\hline
-                        Norway&     3&    24&     9&    33&    27&     8&    36 \\\hline
-                        Poland&    16&   137&   106&   243&   263&    73&   337 \\\hline
-                      Portugal&     6&    51&    20&    71&    56&    20&    75 \\\hline
-                       Romania&    13&   111&    36&   146&   123&    35&   158 \\\hline
-            Russian Federation&    45&   345&   433&   778&   699&   444&  1143 \\\hline
-                        Serbia&     5&    39&    15&    54&    42&    15&    56 \\\hline
-                      Slovakia&     2&    15&     5&    20&    19&     5&    24 \\\hline
-                      Slovenia&     2&    11&     3&    13&    18&     2&    20 \\\hline
-                         Spain&    34&   125&    73&   198&   140&    72&   213 \\\hline
-                        Sweden&     2&    18&    19&    38&    39&    19&    58 \\\hline
-                   Switzerland&     1&     7&     8&    15&    13&     8&    21 \\\hline
-                    Tajikistan&     1&    14&     4&    19&    14&     4&    19 \\\hline
-                        Turkey&    34&   384&   169&   553&   413&   142&   555 \\\hline
-                  Turkmenistan&     8&    24&     7&    31&    24&     7&    31 \\\hline
-                       Ukraine&    25&   280&   133&   413&   351&   133&   484 \\\hline
-                United Kingdom&    18&   108&    69&   176&    84&    68&   153 \\\hline
-                    Uzbekistan&     8&    75&    23&    98&    75&    23&    98 \\\hline
-                   Asian areas&   303&  1918&  1056&  2974&  1918&  1056&  2974 \\\hline
-                  North Africa&    24&   155&   129&   284&   155&   129&   284 \\\hline
-                    Baltic Sea&     4&    10&     0&    10&    10&     0&    10 \\\hline
-                     Black Sea&     3&     6&     0&     6&     6&     0&     6 \\\hline
-             Mediterranean Sea&    40&    98&     0&    98&    98&     0&    98 \\\hline
-                     North Sea&     9&    21&     0&    21&    21&     0&    21 \\\hline
-     North-East Atlantic Ocean&    25&    63&     0&    63&    63&     0&    63 \\\hline
-      Natural marine emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline
-            Volcanic emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline\hline
-                         TOTAL&   795&  5095&  2858&  7954&  6064&  2811&  8875 \\\hline
+                    Montenegro&     1&     7&     1&     9&     5&     1&     6 \\\hline
+                   Netherlands&     2&    15&    12&    28&    15&    12&    28 \\\hline
+               North_Macedonia&     1&     8&     5&    13&     8&     5&    13 \\\hline
+                        Norway&     3&    24&     9&    32&    24&     9&    32 \\\hline
+                        Poland&    14&   122&    97&   218&   251&    70&   321 \\\hline
+                      Portugal&     7&    50&    20&    71&    50&    20&    71 \\\hline
+                       Romania&    13&   112&    41&   153&   112&    41&   153 \\\hline
+            Russian_Federation&    46&   303&   425&   729&   659&   436&  1096 \\\hline
+                        Serbia&     6&    46&    16&    61&    46&    16&    61 \\\hline
+                      Slovakia&     2&    18&     5&    23&    19&     6&    25 \\\hline
+                      Slovenia&     2&    11&     3&    13&    11&     3&    13 \\\hline
+                         Spain&    29&   135&    60&   195&   135&    60&   195 \\\hline
+                        Sweden&     2&    18&    19&    37&    18&    19&    37 \\\hline
+                   Switzerland&     1&     6&     8&    14&    12&     8&    20 \\\hline
+                    Tajikistan&     5&    30&     9&    40&    30&     9&    40 \\\hline
+                        Turkey&    32&   384&   169&   553&   413&   141&   554 \\\hline
+                  Turkmenistan&     4&    26&     8&    34&    26&     8&    34 \\\hline
+                       Ukraine&    25&   281&   132&   413&   358&   132&   490 \\\hline
+                United_Kingdom&    18&   109&    62&   171&   109&    62&   171 \\\hline
+                    Uzbekistan&     9&    63&    19&    82&    63&    19&    82 \\\hline
+                   Asian_areas&   257&  1329&   904&  2233&  1329&   904&  2233 \\\hline
+                  North_Africa&   257&   163&   128&   291&   163&   128&   291 \\\hline
+                    Baltic_Sea&     4&    11&     0&    11&    11&     0&    11 \\\hline
+                     Black_Sea&     3&     8&     0&     8&     8&     0&     8 \\\hline
+             Mediterranean_Sea&    44&   110&     0&   110&   110&     0&   110 \\\hline
+                     North_Sea&    10&    26&     0&    26&    26&     0&    26 \\\hline
+     North-East_Atlantic_Ocean&    28&    70&     0&    70&    70&     0&    70 \\\hline
+      Natural_marine_emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline
+            Volcanic_emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline\hline
+                         TOTAL&   978&  4477&  2675&  7152&  5196&  2632&  7828 \\\hline 
+
 
 \end{tabular}
 \end{center}
