typos in emission tables

--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -60,7 +60,7 @@ reported data.
                     Azerbaijan&    79&   294&    79&   378&   665 \\\hline
                        Belarus&    45&   128&   134&   276&   696 \\\hline
                        Belgium&    30&   160&    66&   113&   369 \\\hline
-        Bosnia_and_Herzegovina&    93&    51&    22&   100&   242 \\\hline
+        Bosnia and Herzegovina&    93&    51&    22&   100&   242 \\\hline
                       Bulgaria&    88&    97&    44&    72&   254 \\\hline
                        Croatia&     8&    54&    37&    75&   216 \\\hline
                         Cyprus&    16&    14&     7&     9&    11 \\\hline
@@ -87,12 +87,12 @@ reported data.
                         Monaco&     0&     0&     0&     0&     2 \\\hline
                     Montenegro&    25&    13&     4&     9&    34 \\\hline
                    Netherlands&    23&   238&   123&   237&   626 \\\hline
-               North_Macedonia&   116&    21&     8&    24&    55 \\\hline
+               North Macedonia&   116&    21&     8&    24&    55 \\\hline
                         Norway&    16&   151&    29&   153&   400 \\\hline
                         Poland&   427&   682&   317&   647&  2112 \\\hline
                       Portugal&    44&   148&    59&   161&   293 \\\hline
                        Romania&    99&   217&   178&   230&   894 \\\hline
-            Russian_Federation&  1368&  3133&  1219&  3838& 12373 \\\hline
+            Russian Federation&  1368&  3133&  1219&  3838& 12373 \\\hline
                         Serbia&   395&   129&    76&   121&   330 \\\hline
                       Slovakia&    16&    61&    31&   100&   279 \\\hline
                       Slovenia&     4&    29&    18&    31&    97 \\\hline
@@ -103,17 +103,17 @@ reported data.
                         Turkey&  2455&   862&   765&  1121&  1674 \\\hline
                   Turkmenistan&   113&   265&    73&   187&   903 \\\hline
                        Ukraine&   508&   614&   246&   384&  2835 \\\hline
-                United_Kingdom&   163&   843&   272&   813&  1585 \\\hline
+                United Kingdom&   163&   843&   272&   813&  1585 \\\hline
                     Uzbekistan&   325&   346&   200&   317&  1174 \\\hline
-                   Asian_areas&  5289&  6651&  3301&  9368& 33748 \\\hline
-                  North_Africa&  1230&  1266&   408&  1602&  3241 \\\hline
-                    Baltic_Sea&    11&   349&     0&     3&    28 \\\hline
-                     Black_Sea&    50&   112&     0&     1&    10 \\\hline
-             Mediterranean_Sea&   750&  1519&     0&    13&   120 \\\hline
-                     North_Sea&    36&   758&     0&     7&    67 \\\hline
-     North-East_Atlantic_Ocean&   494&   931&     0&     8&    75 \\\hline
-      Natural_marine_emissions&  2926&     0&     0&     0&     0 \\\hline
-            Volcanic_emissions&   943&     0&     0&     0&     0 \\\hline\hline
+                   Asian areas&  5289&  6651&  3301&  9368& 33748 \\\hline
+                  North Africa&  1230&  1266&   408&  1602&  3241 \\\hline
+                    Baltic Sea&    11&   349&     0&     3&    28 \\\hline
+                     Black Sea&    50&   112&     0&     1&    10 \\\hline
+             Mediterranean Sea&   750&  1519&     0&    13&   120 \\\hline
+                     North Sea&    36&   758&     0&     7&    67 \\\hline
+     North-East Atlantic Ocean&   494&   931&     0&     8&    75 \\\hline
+      Natural marine emissions&  2926&     0&     0&     0&     0 \\\hline
+            Volcanic emissions&   943&     0&     0&     0&     0 \\\hline\hline
                          TOTAL& 21486& 25803& 10691& 26105& 80709 \\\hline
 
 \end{tabular}
@@ -142,7 +142,7 @@ reported data.
                     Azerbaijan&     9&    38&    10&    48&    38&    10&    48 \\\hline
                        Belarus&     8&    56&    18&    73&    55&    17&    72 \\\hline
                        Belgium&     3&    18&     9&    27&    18&     9&    27 \\\hline
-        Bosnia_and_Herzegovina&     6&    46&    10&    56&    36&     9&    46 \\\hline
+        Bosnia and Herzegovina&     6&    46&    10&    56&    36&     9&    46 \\\hline
                       Bulgaria&     4&    30&    17&    46&    30&    17&    46 \\\hline
                        Croatia&     4&    29&    12&    41&    29&    12&    41 \\\hline
                         Cyprus&     0&     1&     1&     2&     1&     1&     2 \\\hline
@@ -169,12 +169,12 @@ reported data.
                         Monaco&     0&     0&     0&     0&     0&     0&     0 \\\hline
                     Montenegro&     1&     7&     1&     9&     5&     1&     6 \\\hline
                    Netherlands&     2&    15&    12&    28&    15&    12&    28 \\\hline
-               North_Macedonia&     1&     8&     5&    13&     8&     5&    13 \\\hline
+               North Macedonia&     1&     8&     5&    13&     8&     5&    13 \\\hline
                         Norway&     3&    24&     9&    32&    24&     9&    32 \\\hline
                         Poland&    14&   122&    97&   218&   251&    70&   321 \\\hline
                       Portugal&     7&    50&    20&    71&    50&    20&    71 \\\hline
                        Romania&    13&   112&    41&   153&   112&    41&   153 \\\hline
-            Russian_Federation&    46&   303&   425&   729&   659&   436&  1096 \\\hline
+            Russian Federation&    46&   303&   425&   729&   659&   436&  1096 \\\hline
                         Serbia&     6&    46&    16&    61&    46&    16&    61 \\\hline
                       Slovakia&     2&    18&     5&    23&    19&     6&    25 \\\hline
                       Slovenia&     2&    11&     3&    13&    11&     3&    13 \\\hline
@@ -185,17 +185,17 @@ reported data.
                         Turkey&    32&   384&   169&   553&   413&   141&   554 \\\hline
                   Turkmenistan&     4&    26&     8&    34&    26&     8&    34 \\\hline
                        Ukraine&    25&   281&   132&   413&   358&   132&   490 \\\hline
-                United_Kingdom&    18&   109&    62&   171&   109&    62&   171 \\\hline
+                United Kingdom&    18&   109&    62&   171&   109&    62&   171 \\\hline
                     Uzbekistan&     9&    63&    19&    82&    63&    19&    82 \\\hline
-                   Asian_areas&   257&  1329&   904&  2233&  1329&   904&  2233 \\\hline
-                  North_Africa&   257&   163&   128&   291&   163&   128&   291 \\\hline
-                    Baltic_Sea&     4&    11&     0&    11&    11&     0&    11 \\\hline
-                     Black_Sea&     3&     8&     0&     8&     8&     0&     8 \\\hline
-             Mediterranean_Sea&    44&   110&     0&   110&   110&     0&   110 \\\hline
-                     North_Sea&    10&    26&     0&    26&    26&     0&    26 \\\hline
-     North-East_Atlantic_Ocean&    28&    70&     0&    70&    70&     0&    70 \\\hline
-      Natural_marine_emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline
-            Volcanic_emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline\hline
+                   Asian areas&   257&  1329&   904&  2233&  1329&   904&  2233 \\\hline
+                  North Africa&   257&   163&   128&   291&   163&   128&   291 \\\hline
+                    Baltic Sea&     4&    11&     0&    11&    11&     0&    11 \\\hline
+                     Black Sea&     3&     8&     0&     8&     8&     0&     8 \\\hline
+             Mediterranean Sea&    44&   110&     0&   110&   110&     0&   110 \\\hline
+                     North Sea&    10&    26&     0&    26&    26&     0&    26 \\\hline
+     North-East Atlantic Ocean&    28&    70&     0&    70&    70&     0&    70 \\\hline
+      Natural marine emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline
+            Volcanic emissions&     0&     0&     0&     0&     0&     0&     0 \\\hline\hline
                          TOTAL&   978&  4477&  2675&  7152&  5196&  2632&  7828 \\\hline 
 
 
