Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -184,7 +184,7 @@ A more detailed comparison between model and measurements for ozone for the year
 \subsection{Particulate matter} 
 \label{subs:PMstatus}
 
-Maps of annual mean concentrations of \PM[10] and \PM[2.5] in 2018,
+Maps of annual mean concentrations of \PM[10] and \PM[2.5] in 2019,
 calculated by the EMEP MSC-W model, are presented in
 Figure~\ref{fig:PMin2018}. The figures also show annual mean \PM[10]
 and \PM[2.5] concentrations observed at the EMEP monitoring network,
@@ -192,10 +192,10 @@ represented by colour triangles overlaying the contours of the
 modelled concentration fields.
 
 \begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=175 67 448 754]{FIGS_PM/Mean_in_2018_PM10_EMEP01_ALL.pdf}}\\
+  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=175 67 448 754]{FIGS_PM/Mean_in_2019_PM10_EMEP01_ALL.pdf}}\\
   \vspace{0.5cm}
-  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=175 67 448 754]{FIGS_PM/Mean_in_2018_PM25_EMEP01_ALL.pdf}}
-\caption{Annual mean concentrations of \PM[10] and \PM[2.5] in 2018:
+  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=175 67 448 754]{FIGS_PM/Mean_in_2019_PM25_EMEP01_ALL.pdf}}
+\caption{Annual mean concentrations of \PM[10] and \PM[2.5] in 2019:
   calculated with the EMEP MSC-W model (colour contours) and observed
   at EMEP monitoring network sites (colour triangles). \textit{Note:
     Observations include hourly, daily and weekly data.}}
@@ -230,12 +230,12 @@ underestimates the observed annual mean of \PM[10] by 22\% and
 
 In terms of meteorological conditions, the year 2018 was relatively warm across the EMEP area (except for Asian parts of Russia and Kazakhstan), particularly in Central Europe  (Figure~\ref{fig:2018-avMET}). The spring and summer were also notably warm in Fennoscandia, the Baltic countries and Eastern Europe. Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), causing elevated pollution levels, are less frequent in warm winters. In spring/summer time, higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, in Northern and Central Europe, the Baltic region and European Russia, the year 2018 was dry compared to the 2000-2017 average, especially in the spring and summer, which contributed to the photochemistry and secondary aerosol formation. On the other hand, it was a relatively wet year in Western and Southern Europe (Figure~\ref{fig:2018-avMET}) and also in parts of Central, Northern and Eastern Europe in the winter~\citep{CAMS2019}, so that the pollutants were more efficiently removed from the air in those regions.  
 
-\begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2018_vs_2000-2017.pdf}}
-  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2018_vs_2000-2017.pdf}}
-\caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2018 from the 2000-2017 mean.}
-\label{fig:PManomin2018}
-\end{figure}
+%\begin{figure}[H]
+%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2018_vs_2000-2017.pdf}}
+%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2018_vs_2000-2017.pdf}}
+%\caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2018 from the 2000-2017 mean.}
+%\label{fig:PManomin2018}
+%\end{figure}
 
 Figure~\ref{fig:PManomin2018} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2018 relative to 2000-2017 averages simulated with a model version used for 2019 reporting and EMEP reported emissions. It shows that the PM pollution levels in 2018 were rather moderate, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average). Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. The prolonged heat wave affected Central and Northern Europe during summer 2018 and caused enhanced aerosol levels; this is discussed in Chapter \ref{ch:Summer2018}.
 
@@ -277,18 +277,18 @@ observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were r
 15.5 \ug) and in Austria (AT0002) and Czechia (CZ0003) both with 14.5 \ug.
 
 
-\begin{figure}[ht]
-  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM10_ModObs_EMEP01_2018.pdf}}\\
-  \vspace{0.5cm}
-  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM25_ModObs_EMEP01_2018.pdf}}
-\caption{Calculated (with 0.1\degrees resolution) and observed (triangles) number of days with
-  exceedances in 2018: \PM[10] exceeding 50 \ug (upper) and \PM[2.5]
-  exceeding 25 \ug (lower panel). \textit{Note: The EU Directive requires no
-    more than 35 days with exceedances for \PM[10], whereas WHO
-    recommends no more than 3 days with exceedances for \PM[10] and
-    \PM[2.5] per calendar year. }}
-\label{fig:PMexceed}
-\end{figure}
+%\begin{figure}[ht]
+%  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM10_ModObs_EMEP01_2018.pdf}}\\
+%  \vspace{0.5cm}
+%  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM25_ModObs_EMEP01_2018.pdf}}
+%\caption{Calculated (with 0.1\degrees resolution) and observed (triangles) number of days with
+%  exceedances in 2018: \PM[10] exceeding 50 \ug (upper) and \PM[2.5]
+%  exceeding 25 \ug (lower panel). \textit{Note: The EU Directive requires no
+%    more than 35 days with exceedances for \PM[10], whereas WHO
+%    recommends no more than 3 days with exceedances for \PM[10] and
+%    \PM[2.5] per calendar year. }}
+%\label{fig:PMexceed}
+%\end{figure}
 
 
 The maps in Figure~\ref{fig:PMexceed} show the number of days with
