--- a/report.tex
+++ b/report.tex
@@ -321,7 +321,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterIntro}
+%\includeonly{chapterStatus2019}
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
 
 \begin{document}
