changes in SR tables and emis appendix

--- a/chapterAPPX_SR_2019.tex
+++ b/chapterAPPX_SR_2019.tex
@@ -21,13 +21,10 @@
 % C.10: PM2.5 (BF N, 15%, BIC)
 % C.11: PM2.5 (BF A, 15%, BIC)
 % C.12: PM2.5 (BF V, 15%, BIC)
-% C.13.1: PM2.5 (BF SNAV + LF P, 15%, BIC, EMEP)
-% C.13.2: PM2.5 (BF SNAVP, 15%, BIC, EMEPwRef2C)
-% C.14.1: ECfine (LF P, 15%, BIC, EMEP)
-% C.14.2: ECfine (LF P, 15%, BIC, EMEPwRef2C)
+% C.13: PM2.5 (BF SNAVP, 15%, BIC, EMEPwRef2C)
+% C.14: ECfine (BF P, 15%, BIC, EMEPwRef2C)
 % C.15: ECcoarse (BF P, 15%, BIC, EMEPwRef2C)
-% C.16.1: PPM2.5 (LF P, 15%, BIC, EMEP)
-% C.16.2: PPM2.5 (BF P, 15%, BIC, EMEPwRef2C)
+% C.16: PPM2.5 (BF P, 15%, BIC, EMEPwRef2C)
 % The table captions can have up to 3 lines in order to fit on one page.
 
 The source-receptor tables in this appendix are calculated for the
@@ -254,98 +251,25 @@ For EC emissions, two different emission data sets have been used: 1) Official E
 
 
 % %table 13
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAV) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAV) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_1_v2.eps, width=\mywidth, height=\myheight}}\clearpage
 
-%\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAVP) - PPM25wRefC(local-fractions) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%\centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_PPMLF_X_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-%\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAVP) - PPM25wRefC(local-fractions) + PPM25(local-fractions)\\}  Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%\centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_PPMLF_X_1_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-
-% don't use PM2.5_orgSecC_PPMLF_X, (SNAVP-PPM+PPM), we will use PM2.5_orgSecC_LF = SNAV+PPM throughout this report
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAVP) - PPM25wRefC(local-fractions) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_PPMLF_X_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAVP) - PPM25wRefC(local-fractions) + PPM25(local-fractions)\\}  Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_PPMLF_X_1_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1: 2019 country-to-country blame matrices for \textbf{PM2.5 with EMEP PPM emissions}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAV) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.1 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5 with EMEP PPM emissions}.}\\\DraftNote{red}{calculated PM2.5wRefC/(SNAV) + PPM25(local-fractions)\\} Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/PM2.5_orgSecC_1_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-
-\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.2: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
 \centerline{\epsfig{file=SR_Tables_2019/PM25_0.eps, width=\mywidth, height=\myheight}}\clearpage
-\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13.2 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.13 Cont.: 2019 country-to-country blame matrices for \textbf{PM2.5}.}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM, SO$_x$, NO$_x$, NH$_3$ and VOC. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
 \centerline{\epsfig{file=SR_Tables_2019/PM25_1.eps, width=\mywidth, height=\myheight}}\clearpage
 
 
-%% % %table 14
-%% \footnotesize{Table \ref{ch:appx_sr2019}.14.1: 2019 country-to-country blame matrices for \textbf{fine EC\\using official gridded EMEP EC emissions} calculated with the \textit{Local Fractions} method.\\Units:
-%%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}.}\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_orgSecC_LF_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-%% \footnotesize{Table \ref{ch:appx_sr2019}.14.1 Cont.: 2019
-%%     country-to-country blame matrices for \textbf{fine EC\\using official gridded EMEP EC emissions} calculated with the \textit{Local Fractions} method.\\Units:
-%%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_orgSecC_LF_1_v6.eps,
-%%     width=\mywidth, height=\myheight}}\clearpage
 
-% EC v2 fortsatt vanskelig pga EC_age and EC_new komponenter
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.1: 2019
-%     country-to-country blame matrices for \textbf{fine EC} \DraftNote{red}{(using officially reported gridded EMEP EC emissions)}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_orgSecC_LF_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.1 Cont.: 2019
-%     country-to-country blame matrices for \textbf{fine EC}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_orgSecC_LF_1_v2.eps,
-%     width=\mywidth, height=\myheight}}\clearpage
+% %table 14
+ \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14: 2019
+     country-to-country blame matrices for \textbf{fine EC}.}\\ Units:
+   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+ \centerline{\epsfig{file=SR_Tables_2019/ECfine_0.eps, width=\mywidth, height=\myheight}}\clearpage
+ \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14 Cont.: 2019
+     country-to-country blame matrices for \textbf{fine EC}.}\\ Units:
+   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+ \centerline{\epsfig{file=SR_Tables_2019/ECfine_1.eps,
+     width=\mywidth, height=\myheight}}\clearpage
 
-% brute force
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.2: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}}\\ Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/ECfine_0.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.2 Cont.: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}.}\\ Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/ECfine_1.eps,
-%     width=\mywidth, height=\myheight}}\clearpage
-
-% bug with chemistry in v2 and separate components, dropped
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.3: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.3: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_1_v2.eps,
-%     width=\mywidth, height=\myheight}}\clearpage
-
-% this is fixed chemistry, i.e. v3, but still problems
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.3: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_0.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.3: 2019
-%     country-to-country blame matrices for \textbf{fine EC with EMEPwRef2C}}\\ calculated using local fractions. Units:
-%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_1.eps,
-%     width=\mywidth, height=\myheight}}\clearpage
-
-% v6, further improved chemistry
-% local fractions
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.2: 2019
-%%     country-to-country blame matrices for \textbf{fine EC}}\\calculated with the \textit{Local Fractions} method.\\Units:
-%%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.14.2: 2019
-%%     country-to-country blame matrices for \textbf{fine EC}}\\calculated with the \textit{Local Fractions} method.\\Units:
-%%   0.1 ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/EC_fine_LF_1_v6.eps,
-%%     width=\mywidth, height=\myheight}}\clearpage
 
 
 % %table 15
@@ -361,30 +285,12 @@ For EC emissions, two different emission data sets have been used: 1) Official E
 
 
 % %table 16
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.1: 2019 country-to-country blame matrices for \textbf{PPM2.5 using EMEP PPM emissions}}\\calculated with the \textit{Local Fractions} method.\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_orgSecC_LF_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-%% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.1 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5 using EMEP PPM emissions}}\\calculated with local fraction method.\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-%% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_orgSecC_LF_1_v6.eps, width=\mywidth, height=\myheight}}\clearpage
 
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.1: 2019 country-to-country blame matrices for \textbf{PPM2.5}  calculated with local fraction method}\\ and EMEP Sector C emissions. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_orgSecC_LF_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.1 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5}  calculated with local fraction method}\\ and EMEP Sector C emissions. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_orgSecC_LF_1_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-
-\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.2: 2019 country-to-country blame matrices for \textbf{PPM2.5}}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16: 2019 country-to-country blame matrices for \textbf{PPM2.5}}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
 \centerline{\epsfig{file=SR_Tables_2019/PPM25_0.eps, width=\mywidth, height=\myheight}}\clearpage
-\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.2 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5}}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
+\footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5}}\\ Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
 \centerline{\epsfig{file=SR_Tables_2019/PPM25_1.eps, width=\mywidth, height=\myheight}}\clearpage
 
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.3: 2019 country-to-country blame matrices for \textbf{PPM2.5 with EMEPwRef2C}}\\ calculated with local fraction method. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_ref2C_LF_0_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.3 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5 with EMEPwRef2C}}\\ calculated with local fraction method. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_ref2C_LF_1_v6.eps, width=\mywidth, height=\myheight}}\clearpage
-
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.3: 2019 country-to-country blame matrices for \textbf{PPM2.5 with EMEPwRef2C}}\\ calculated with local fraction method. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_LF_0_v2.eps, width=\mywidth, height=\myheight}}\clearpage
-% \footnotesize{\mbox{Table \ref{ch:appx_sr2019}.16.3 Cont.: 2019 country-to-country blame matrices for \textbf{PPM2.5 with EMEPwRef2C}}\\ calculated with local fraction method. Units: ng/m$^3$ per 15\% emis. red. of PPM. \textbf{Emitters $\rightarrow$, Receptors $\downarrow$}. }\\[\baselineskip]\enlargethispage{\myenlarge} \hspace{-0.5cm} 
-% \centerline{\epsfig{file=SR_Tables_2019/PPM2.5_LF_1_v2.eps, width=\mywidth, height=\myheight}}\clearpage
 
 
 
